--- a/hpmais/index.html
+++ b/hpmais/index.html
@@ -8,12 +8,13 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="icon.png">
 
     <title>HPMAIS</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
@@ -34,66 +35,125 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">NOME DA EMPRESA</a>
+    <section class="hero-unit">
+      <nav class="navbar navbar-inverse navbar-fixed-top navbar--custom">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">LOGO</a>
+            <a class="navbar-brand" href="#">NOME DA EMPRESA</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <form class="navbar-form navbar-right">
+              <div class="navbar--social">
+                <i class="fa fa-youtube"></i>
+                <i class="fa fa-google-plus"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa"><img src="us.png"></i>
+                <i class="fa"><img src="es.png"></i>
+              </div>
+              <div class="form-group">
+                <input type="text" placeholder="digite seu email" class="form-control input--header">
+              </div>
+              <div class="form-group">
+                <input type="password" placeholder="digite sua senha" class="form-control input--header">
+              </div>
+              <button type="submit" class="btn btn--header">OK</button>
+            </form>
+          </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+      </nav>
+      <nav class="custom-nav" style="border-radius: 0;">
+        <div class="container">
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav nav-justified">
+              <li class="active"><a href="#" class="li--border-r">CLUBE</a></li>
+              <li><a href="#" class="li--border-r">FUTEBOL</a></li>
+              <li><a href="#" class="li--border-r">INICIAÇÃO ESPORTIVA</a></li>
+              <li><a href="#" class="li--border-r">NOTÍCIAS</a></li>
+              <li><a href="#" class="li--border-r">TORCIDA</a></li>
+              <li><a href="#" class="li--border-r">LOJA</a></li>
+              <li><a href="#" class="li--border-r">MARKETING</a></li>
+              <li class=""><a href="#">CONTATO</a></li>
+            </ul>
+          </div><!--/.navbar-collapse -->
+        </div>
+      </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
       <div class="container-fluid">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
+        <!-- Example row of columns -->
+        <div class="row">
+          <div class="col-md-12">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <img src="first-slide.png" alt="...">
+                  <div class="carousel-caption">
+                    First slide...
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="second-slide.png" alt="...">
+                  <div class="carousel-caption">
+                    Second one...
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="third-slide.png" alt="...">
+                  <div class="carousel-caption">
+                    Third...
+                  </div>
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-sm-6" style="background: rgb(200, 201, 185)"> Teste</div>
+              <div class="col-sm-6"></div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+
+              </div>
+            </div>
+         </div>
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
 
-      <hr>
+        <hr>
 
-      <footer>
-        <p>&copy; 2016 Company, Inc.</p>
-      </footer>
-    </div> <!-- /container -->
+        <footer>
+          <p>&copy; 2016 Company, Inc.</p>
+        </footer>
+      </div> <!-- /container -->
+    </section>
+
+
 
 
     <!-- Bootstrap core JavaScript
