--- a/hpmais/index.html
+++ b/hpmais/index.html
@@ -8,12 +8,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="imgs/icon.png">
 
     <title>HPMAIS</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -45,8 +45,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">LOGO</a>
-            <a class="navbar-brand" href="#">NOME DA EMPRESA</a>
+            <a class="navbar-brand navbar-brand--logo" href="#"><img src="imgs/logo.png" alt="Goiás"></a>
+            <a class="navbar-brand" href="#">GOIÁS</a>
+            <a class="navbar-brand navbar-brand--fc" href="#">ESPORTE CLUBE</a>
           </div>
           <div class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
@@ -56,8 +57,8 @@
                 <i class="fa fa-twitter"></i>
                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-instagram"></i>
-                <i class="fa"><img src="us.png"></i>
-                <i class="fa"><img src="es.png"></i>
+                <i class="fa"><img src="imgs/us.png"></i>
+                <i class="fa"><img src="imgs/es.png"></i>
               </div>
               <div class="form-group">
                 <input type="text" placeholder="digite seu email" class="form-control input--header">
@@ -91,42 +92,40 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-              <!-- Indicators -->
-              <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-              </ol>
+            <div id="carousel-news" class="carousel slide" data-ride="carousel">
 
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="first-slide.png" alt="...">
+                  <img src="imgs/slide01.png" alt="...">
                   <div class="carousel-caption">
-                    First slide...
+                    <h2>
+                      PAZ NO FUTEBOL
+                    </h2>
+                    Vila Nova e Goiás lançam campanha
                   </div>
                 </div>
                 <div class="item">
-                  <img src="second-slide.png" alt="...">
+                  <img src="imgs/slide02.png" alt="...">
                   <div class="carousel-caption">
-                    Second one...
-                  </div>
-                </div>
-                <div class="item">
-                  <img src="third-slide.png" alt="...">
-                  <div class="carousel-caption">
-                    Third...
+                    <h2>
+                      LOREM IPSUM
+                    </h2>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   </div>
                 </div>
               </div>
 
+              <div class="carousel--gradient"></div>
+
+
+
               <!-- Controls -->
-              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <a class="left carousel-control" href="#carousel-news" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <a class="right carousel-control" href="#carousel-news" role="button" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
@@ -134,13 +133,12 @@
           </div>
           <div class="col-md-12">
             <div class="row">
-              <div class="col-sm-6" style="background: rgb(200, 201, 185)"> Teste</div>
-              <div class="col-sm-6"></div>
+              <div class="col-md-24">
+                <img src="imgs/left-high-banner.png" class="img-responsive" alt="">
+              </div>
             </div>
             <div class="row">
-              <div class="col-md-12">
 
-              </div>
             </div>
          </div>
         </div>
