--- a/hpmais/index.html
+++ b/hpmais/index.html
@@ -36,7 +36,7 @@
   <body>
 
     <section class="hero-unit">
-      <nav class="navbar navbar-inverse navbar-fixed-top navbar--custom">
+      <nav class="navbar navbar-inverse navbar-fixed-top navbar--custom navbar--custombg">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -52,13 +52,13 @@
           <div class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
               <div class="navbar--social">
-                <i class="fa fa-youtube"></i>
-                <i class="fa fa-google-plus"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-instagram"></i>
-                <i class="fa"><img src="imgs/us.png"></i>
-                <i class="fa"><img src="imgs/es.png"></i>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="#"><i class="fa fa-google-plus"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa"><img src="imgs/us.png"></i></a>
+                <a href="#"><i class="fa"><img src="imgs/es.png"></i></a>
               </div>
               <div class="form-group">
                 <input type="text" placeholder="digite seu email" class="form-control input--header">
@@ -71,18 +71,18 @@
           </div>
         </div>
       </nav>
-      <nav class="custom-nav" style="border-radius: 0;">
+      <nav class="navbar--options navbar--custombg">
         <div class="container">
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav nav-justified">
-              <li class="active"><a href="#" class="li--border-r">CLUBE</a></li>
-              <li><a href="#" class="li--border-r">FUTEBOL</a></li>
-              <li><a href="#" class="li--border-r">INICIAÇÃO ESPORTIVA</a></li>
-              <li><a href="#" class="li--border-r">NOTÍCIAS</a></li>
-              <li><a href="#" class="li--border-r">TORCIDA</a></li>
-              <li><a href="#" class="li--border-r">LOJA</a></li>
-              <li><a href="#" class="li--border-r">MARKETING</a></li>
-              <li class=""><a href="#">CONTATO</a></li>
+              <li class="active"><a href="#" class="navbar--item--border">CLUBE</a></li>
+              <li><a href="#" class="navbar--item--border">FUTEBOL</a></li>
+              <li><a href="#" class="navbar--item--border">INICIAÇÃO ESPORTIVA</a></li>
+              <li><a href="#" class="navbar--item--border">NOTÍCIAS</a></li>
+              <li><a href="#" class="navbar--item--border">TORCIDA</a></li>
+              <li><a href="#" class="navbar--item--border">LOJA</a></li>
+              <li><a href="#" class="navbar--item--border">MARKETING</a></li>
+              <li><a href="#">CONTATO</a></li>
             </ul>
           </div><!--/.navbar-collapse -->
         </div>
