--- a/hpmais/index.html
+++ b/hpmais/index.html
@@ -51,7 +51,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
-              <div class="navbar--social">
+              <!--<div class="navbar--social">
                 <a href="#"><i class="fa fa-youtube"></i></a>
                 <a href="#"><i class="fa fa-google-plus"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -59,7 +59,7 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"><i class="fa"><img src="imgs/us.png"></i></a>
                 <a href="#"><i class="fa"><img src="imgs/es.png"></i></a>
-              </div>
+              </div>-->
               <div class="form-group">
                 <input type="text" placeholder="digite seu email" class="form-control input--header">
               </div>
@@ -104,6 +104,7 @@
                     </h2>
                     Vila Nova e Goiás lançam campanha
                   </div>
+                  <div class="carousel--gradient"></div>
                 </div>
                 <div class="item">
                   <img src="imgs/slide02.png" alt="...">
@@ -113,10 +114,11 @@
                     </h2>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   </div>
+                  <div class="carousel--gradient"></div>
                 </div>
               </div>
 
-              <div class="carousel--gradient"></div>
+
 
 
 
