--- a/hpmais/index.html
+++ b/hpmais/index.html
@@ -36,7 +36,7 @@
   <body>
 
     <section class="hero-unit">
-      <nav class="navbar navbar-inverse navbar-fixed-top navbar--custom navbar--custombg">
+      <nav id="headernav" class="navbar navbar-inverse navbar-fixed-top navbar--custom navbar--custombg">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -46,8 +46,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand navbar-brand--logo" href="#"><img src="imgs/logo.png" alt="Goiás"></a>
-            <a class="navbar-brand" href="#">GOIÁS</a>
-            <a class="navbar-brand navbar-brand--fc" href="#">ESPORTE CLUBE</a>
+            <a class="navbar-brand navbar-brand--title" href="#"><img src="imgs/title.png" alt="Goiás"></a>
           </div>
           <div class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
@@ -71,7 +70,7 @@
           </div>
         </div>
       </nav>
-      <nav class="navbar--options navbar--custombg">
+      <nav id="header-options" class="navbar--options navbar--custombg">
         <div class="container">
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav nav-justified">
@@ -88,12 +87,11 @@
         </div>
       </nav>
 
-      <div class="container-fluid">
+      <div id="main" class="container-fluid">
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-12">
             <div id="carousel-news" class="carousel slide" data-ride="carousel">
-
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
@@ -117,11 +115,6 @@
                   <div class="carousel--gradient"></div>
                 </div>
               </div>
-
-
-
-
-
               <!-- Controls -->
               <a class="left carousel-control" href="#carousel-news" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -139,18 +132,23 @@
                 <img src="imgs/left-high-banner.png" class="img-responsive" alt="">
               </div>
             </div>
-            <div class="row">
-
-            </div>
          </div>
         </div>
-
-        <hr>
-
-        <footer>
-          <p>&copy; 2016 Company, Inc.</p>
-        </footer>
       </div> <!-- /container -->
+
+      <div id="games" class="container-fluid">
+      </div>
+      <div id="tv" class="container-fluid">
+      </div>
+      <div id="social" class="container-fluid">
+
+      </div>
+      <div id="store" class="container-fluid">
+
+      </div>
+      <div id="footer" class="container-fluid">
+
+      </div>
     </section>
 
 
