--- a/hpmais/index.html
+++ b/hpmais/index.html
@@ -50,7 +50,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
-              <!--<div class="navbar--social">
+              <div class="navbar--social">
                 <a href="#"><i class="fa fa-youtube"></i></a>
                 <a href="#"><i class="fa fa-google-plus"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -58,7 +58,7 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"><i class="fa"><img src="imgs/us.png"></i></a>
                 <a href="#"><i class="fa"><img src="imgs/es.png"></i></a>
-              </div>-->
+              </div>
               <div class="form-group">
                 <input type="text" placeholder="digite seu email" class="form-control input--header">
               </div>
@@ -70,18 +70,18 @@
           </div>
         </div>
       </nav>
-      <nav id="header-options" class="navbar--options navbar--custombg">
+      <nav id="header-options" class="navbar--options navbar--custombg--options">
         <div class="container">
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav nav-justified">
-              <li class="active"><a href="#" class="navbar--item--border">CLUBE</a></li>
-              <li><a href="#" class="navbar--item--border">FUTEBOL</a></li>
-              <li><a href="#" class="navbar--item--border">INICIAÇÃO ESPORTIVA</a></li>
-              <li><a href="#" class="navbar--item--border">NOTÍCIAS</a></li>
-              <li><a href="#" class="navbar--item--border">TORCIDA</a></li>
-              <li><a href="#" class="navbar--item--border">LOJA</a></li>
-              <li><a href="#" class="navbar--item--border">MARKETING</a></li>
-              <li><a href="#">CONTATO</a></li>
+              <li class="active"><a href="#" class="navbar--item--border border--r">CLUBE</a></li>
+              <li><a href="#" class="navbar--item--border border--rl">FUTEBOL</a></li>
+              <li><a href="#" class="navbar--item--border border--rl">INICIAÇÃO ESPORTIVA</a></li>
+              <li><a href="#" class="navbar--item--border border--rl">NOTÍCIAS</a></li>
+              <li><a href="#" class="navbar--item--border border--rl">TORCIDA</a></li>
+              <li><a href="#" class="navbar--item--border border--rl">LOJA</a></li>
+              <li><a href="#" class="navbar--item--border border--rl">MARKETING</a></li>
+              <li><a href="#" class="navbar--item--border border--l">CONTATO</a></li>
             </ul>
           </div><!--/.navbar-collapse -->
         </div>
