--- a/hpmais/index.html
+++ b/hpmais/index.html
@@ -36,6 +36,7 @@
   <body>
 
     <section class="hero-unit">
+      <!-- HEADER -->
       <nav id="headernav" class="navbar navbar-inverse navbar-fixed-top navbar--custom navbar--custombg">
         <div class="container">
           <div class="navbar-header">
@@ -46,56 +47,53 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand navbar-brand--logo" href="#"><img src="imgs/logo.png" alt="Goiás"></a>
-            <a class="navbar-brand navbar-brand--title" href="#"><img src="imgs/title.png" alt="Goiás"></a>
+            <a class="navbar-brand navbar-brand--title" href="#"><img src="imgs/title.png" class="img-responsive" alt="Goiás"></a>
           </div>
           <div class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right">
-              <div class="navbar--social">
-                <a href="#"><i class="fa fa-youtube"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa"><img src="imgs/us.png"></i></a>
-                <a href="#"><i class="fa"><img src="imgs/es.png"></i></a>
+            <form class="navbar-right navbar-right--custom">
+              <div class="header-social">
+                <a href="#" class="header-social__a"><i class="fa fa-youtube"></i></a>
+                <a href="#" class="header-social__a"><i class="fa fa-google-plus"></i></a>
+                <a href="#" class="header-social__a"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="header-social__a"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="header-social__a"><i class="fa fa-instagram"></i></a>
+                <a href="#" class="header-social__a"><i class="fa"><img src="imgs/us.png"></i></a>
+                <a href="#" class="header-social__a"><i class="fa"><img src="imgs/es.png"></i></a>
               </div>
-              <div class="form-group">
-                <input type="text" placeholder="digite seu email" class="form-control input--header">
+              <div class="header-form">
+                <img src="imgs/nacao.png" alt="Nação Esmeraldina">
+                <input type="text" placeholder="digite seu email" class="header-form__input">
+                <input type="password" placeholder="digite sua senha" class="header-form__input">
+                <a href="#" class="header-form__a">OK</a>
               </div>
-              <div class="form-group">
-                <input type="password" placeholder="digite sua senha" class="form-control input--header">
-              </div>
-              <button type="submit" class="btn btn--header">OK</button>
             </form>
           </div>
         </div>
       </nav>
-      <nav id="header-options" class="navbar--options navbar--custombg--options">
+      <nav id="header-options" class="navbar navbar-fixed-top navbar--options navbar--custombg--options">
         <div class="container">
-          <div id="navbar" class="navbar-collapse collapse">
+          <div id="navbar" class="navbar-collapse collapse navbar-options">
             <ul class="nav nav-justified">
-              <li class="active"><a href="#" class="navbar--item--border border--r">CLUBE</a></li>
-              <li><a href="#" class="navbar--item--border border--rl">FUTEBOL</a></li>
-              <li><a href="#" class="navbar--item--border border--rl">INICIAÇÃO ESPORTIVA</a></li>
-              <li><a href="#" class="navbar--item--border border--rl">NOTÍCIAS</a></li>
-              <li><a href="#" class="navbar--item--border border--rl">TORCIDA</a></li>
-              <li><a href="#" class="navbar--item--border border--rl">LOJA</a></li>
-              <li><a href="#" class="navbar--item--border border--rl">MARKETING</a></li>
-              <li><a href="#" class="navbar--item--border border--l">CONTATO</a></li>
+              <li class="active"><a href="#" class="navbar-item border--r">CLUBE</a></li>
+              <li><a href="#" class="navbar-item border--rl">FUTEBOL</a></li>
+              <li><a href="#" class="navbar-item border--rl">INICIAÇÃO ESPORTIVA</a></li>
+              <li><a href="#" class="navbar-item border--rl">NOTÍCIAS</a></li>
+              <li><a href="#" class="navbar-item border--rl">TORCIDA</a></li>
+              <li><a href="#" class="navbar-item border--rl">LOJA</a></li>
+              <li><a href="#" class="navbar-item border--rl">MARKETING</a></li>
+              <li><a href="#" class="navbar-item border--l">CONTATO</a></li>
             </ul>
           </div><!--/.navbar-collapse -->
         </div>
       </nav>
 
       <div id="main" class="container-fluid">
-        <!-- Example row of columns -->
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-lg-12">
             <div id="carousel-news" class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="imgs/slide01.png" alt="...">
+                  <img src="imgs/slide01.jpg" class="image-responsive" alt="...">
                   <div class="carousel-caption">
                     <h2>
                       PAZ NO FUTEBOL
@@ -126,17 +124,63 @@
               </a>
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-lg-12">
             <div class="row">
               <div class="col-md-24">
-                <img src="imgs/left-high-banner.png" class="img-responsive" alt="">
+                <a href="#">
+                  <img src="imgs/sub1.jpg" class="img-responsive" alt="">
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <a href="#">
+                  <img src="imgs/sub2.png" class="img-responsive" alt="Sub 2">
+                </a>
+              </div>
+              <div class="col-sm-12">
+                <a href="#">
+                  <img src="imgs/sub3.jpg" class="img-responsive" alt="Sub 3">
+                </a>
               </div>
             </div>
          </div>
         </div>
       </div> <!-- /container -->
 
-      <div id="games" class="container-fluid">
+      <div id="games" class="container-fluid container-games">
+        <div class="row">
+          <div class="col-lg-14 col-lg-offset-5">
+            <div class="row">
+              <div class="col-lg-18">
+                <div class="row">
+                  <div class="col-sm-24">
+                    <img src="imgs/game1.png" class="" alt="Sub 2">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <img src="imgs/game-banner1.png" class="img-responsive" alt="">
+                  </div>
+                  <div class="col-sm-12">
+                    <img src="imgs/game-banner1.png" class="img-responsive"  alt="">
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="register-box">
+                  <div class="register-box__title">
+                      LOREM IPSUM DOLOR SIT AMET
+                  </div>
+                  <div class="register-box__subtitle">
+                      Fusce
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
       <div id="tv" class="container-fluid">
       </div>
